Update IgValidationTests